--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewooooooooport" content="width=device-width, initial-scale=1.0" />
   <title>Ares Leonardo</title>
   <link rel="shortcut icon" href="https://emojitool.com/img/whatsapp/2.19.352/boar-1805.png" type="image/x-icon" />
 </head>
