--- a/index.HTML
+++ b/index.HTML
@@ -20,8 +20,8 @@
     <img src="https://i.postimg.cc/pL3zrqqS/elliot-garamendi-perrito.webp" alt="Elliot Garamendi" width="128"
       height="128" />
     <h1>
-      Elliot Garamendi
-      <sup>27</sup>
+      Ares Leonardo silva
+      <sup>50</sup>
     </h1>
     <h2>Frontend Developer, Docente</h2>
     <span><i class="bi bi-geo-alt"></i> Lima, Perú <i class="bi bi-geo-alt"></i></span>
