--- a/index.HTML
+++ b/index.HTML
@@ -26,8 +26,7 @@
     <h2>Frontend Developer, Docente</h2>
     <span><i class="bi bi-geo-alt"></i> Lima, Perú <i class="bi bi-geo-alt"></i></span>
     <p>
-      Desarrollador Web Frontend con React y Next.js. Docente de especialización en Desarrollo Web Frontend. Apasionado
-      del autoaprendizaje y del código limpio.
+      soy muchacho provinciano y me levanto muy temprano para ir con mis amigos a trabajar ayayayayaayay
     </p>
     <ul>
       <li class="skill">React</li>
